--- a/gemfile
+++ b/gemfile
@@ -1,6 +1,5 @@
 source 'http://ruby.taobao.org'
-gem 'lagunitas','0.0.2'
+gem 'lagunitas'
 gem 'ox'
 gem 'pry'
 gem 'pry-nav'
-gem 'binding_of_caller'
