linux平台安装脚本去root化，安装到当前用户的私人路径下

--- a/pc/platform/linux/minxing.desktop
+++ b/pc/platform/linux/minxing.desktop
@@ -2,8 +2,8 @@
 Name=Minxing
 Comment=minxing client
 Comment[zh_CN]=敏行客户端
-Exec=/opt/minxing/Minxing
+Exec=/home/USER/.opt/minxing/Minxing
 Terminal=false
 Type=Application
-Icon=/opt/minxing/icon
+Icon=/home/USER/.opt/minxing/icon
 Categories=Office;
